--- a/www/legende.html
+++ b/www/legende.html
@@ -3,7 +3,7 @@
  				<circle cx="20" cy="20" r="20" fill="red"></circle>
  			</svg>
  			<svg width="50" height="50">
- 				<circle cx="20" cy="20" r="20" fill="green"></circle>
+ 				<circle cx="20" cy="20" r="20" fill="blue"></circle>
  			</svg>
  			<svg width="50" height="50">
  				<circle cx="20" cy="20" r="20" fill="grey"></circle>
