implement a css trick to center spinner on busy/disconnected

--- a/www/gears.html
+++ b/www/gears.html
@@ -1,3 +1,3 @@
 <div class="busyModal">
- 			<img src="img/gears.svg">
- </div>
+ 			<img style="width:400px;height:200px;position:absolute;left:50%;top:50%;margin:-100px 0 0 -200px;" src="img/gears.svg">
+</div>
