--- a/www/legende.html
+++ b/www/legende.html
@@ -1,9 +1,10 @@
+<br><br>
 <div class="svg_by_hand">
  			<svg width="50" height="50">
  				<circle cx="20" cy="20" r="20" fill="red"></circle>
  			</svg>
  			<svg width="50" height="50">
- 				<circle cx="20" cy="20" r="20" fill="blue"></circle>
+ 				<circle cx="20" cy="20" r="20" fill="green"></circle>
  			</svg>
  			<svg width="50" height="50">
  				<circle cx="20" cy="20" r="20" fill="grey"></circle>
